Post Food, crop photo, upload to firebase storage.

--- a/XeatsV4/app/src/main/res/values/strings.xml
+++ b/XeatsV4/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">XeatsV4</string>
+    <string name="app_name">UBXeats</string>
     <string name="title_home">XeatsV4</string>
     <string name="title_dashboard">XeatsV4</string>
     <string name="title_notifications">XeatsV4</string>
